Update single page website v4

--- a/css/style.css
+++ b/css/style.css
@@ -1167,7 +1167,10 @@ keyframes animation
 	}
 }
 
+.thumbnail .caption{
+	overflow: hidden;
 
+}
 
 #social ul.social-list{
 	display: inline-block; 
